# spectrum

./: Makefile.in  README.md  configure  configure.ac  numbers.c  scale.c  xpos.c  xpose6.c
doc/: CHANGELOG  FAQ  LICENSE  README  THANKS
pictures/: Infrared_dog.eps  Makefile  Makefile.in  blackbody.eps  blackbody.xcf  brain.xcf  emr.tex  emr_old.tex  emr_particle.tex  emrmaster.tex  gravlens.eps  nightvision.eps  polarizers.eps  polarizers.xcf  prism.eps  prism.xcf  reflection.tex  reflection.xcf  soundbmp.eps  soundwave.tex  submarine.epic  submarine.fig  threedsample.tex  unavailable.eps  waves.c  waves.tex  wmap.eps
sizes/: H2O.eps  H2O.xcf  bacteria.eps  bee.eps  cell.eps  earth.eps  field.eps  football.eps  house.eps  people.eps  sizes.tex  virus.eps
sources/: brain.eps  brain2.eps  cellphone.eps  induction.eps  light1.eps  light2.eps  microwave.eps  people.eps  powerline.eps  powerline.ps  radar.eps  radiation.eps  radio.eps  sources.tex  xray.eps
tex/: 3G-F.txt  3Gbands.tex  4Gbands.tex  5G-F1.txt  5G-F2.txt  5GF1bands.tex  5GF2bands.tex  CellPhoneFrequencies.ods  LTE-F.txt  absorption.tex  amradio.tex  astrofilter.tex  autotest.tex  brain.tex  ca.eps  catv-orig.tex  catv.tex  cbradio.tex  cmb.tex  cn.eps  contact.tex  de.eps  description.tex  emrdescription.tex  fmradio.tex  gammarays.tex  gb.eps  gravity.tex  ham.tex  infrared.tex  interesting.tex  itinerant.tex  laser.tex  leftside.tex  leftsidelow.tex  leftsidemid.tex  modulations.fkt  morse.tex  notes.tex  numbers.tex  (+23 more)
